--- a/scanner/styles.css
+++ b/scanner/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
-  background-image: url('https://i.imgur.com/vV6gZJb.jpg');
+  background-image: url('https://i.imgur.com/EuNXtMx.jpeg');
   background-size: cover;
   background-position: center;
   height: 100vh;
